--- a/Navbar/Navbar.html
+++ b/Navbar/Navbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NAVBAR</title>
+    <title>Navbar</title>
     <link rel="stylesheet" href="Navbar.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
@@ -17,17 +17,18 @@
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
-      <a href="#Inicio" class="enlace">
+      <a href="#Inicio" class="Inicio">
         <img
           class="logo"
           src="https://1.bp.blogspot.com/-s11Ugu2BXHw/YNdO8AyCd_I/AAAAAAAAXsw/3ql-VrHDC0M2hZFNZKYJnfNwWBQgj4pmQCLcBGAsYHQ/s667/Captura_de_pantalla_2021-06-26_a_la_s__11.54.44_a._m.-removebg-preview.png"
         />
       </a>
       <ul>
-        <li><a class="active" href="#Inicio">INICIO</a></li>
-        <li><a href="#Hoja de vida" class="HojaVida">HOJA DE VIDA</a></li>
-        <li id="Contacto"><i class="fa-solid fa-phone"></i> 3147209933</li>
+        <li><a class="Inicio-Active" href="#Inicio">INICIO</a></li>
+        <li><a href="#Hojadevida">HOJA DE VIDA</a></li>
+        <li id="Contacto">3147209933<i class="fa fa-phone"></i></li>
       </ul>
     </nav>
+    <iframe class="ifFooter" src="../Footer/Footer.html"></iframe>
   </body>
 </html>
